# uws-core

./: .gitignore  main.py  pyproject.toml  requirements.txt
adapters/: google_maps.py  indeed.py  yelp_nextdata.py
config/: core.default.yaml
core/: helpers.py  writer.py
